# local-rag-mlx

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/eval/: generation.jsonl  retrieval.jsonl
backend/eval/results/: generation.json  judge_cache.jsonl  retrieval.json
backend/src/local_rag/: api.py  chunking.py  config.py  corpus.py  embedding.py  eval_generation.py  eval_retrieval.py  extraction.py  generation.py  ingest.py  judge.py  prompting.py  reranking.py  retrieval.py  search.py  vectorstore.py
backend/tests/: test_api.py  test_chunking.py  test_eval_generation.py  test_eval_metrics.py  test_package.py  test_prompting.py
frontend/: README.md  next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: sse.ts
