[project]
name = "local-rag-backend"
version = "0.1.0"
description = "Fully local RAG engine with LoRA fine-tuning on Apple Silicon"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.15",
    "flagembedding>=1.3.4",
    "fpdf2>=2.8",
    "pydantic-settings>=2.6",
    "qdrant-client>=1.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_rag"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/local_rag/corpus.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
